force-app/main/default/objects/Pricing_Offer__c/Pricing_Offer__c.object-meta.xml
<CustomObject>
    <label>Pricing Offer</label>
    <nameField>
        <label>Pricing Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Offer</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>