force-app/main/default/objects/Pricing_Offer__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <description>/Changed on 16-10-2017 by Sagar Hinsu</description>
    <label>Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>Pricing Offer</relationshipLabel>
    <relationshipName>Pricing_Offer</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>