force-app/main/default/objects/Pricing_Offer__c/fields/APR__c.field-meta.xml
<CustomField>
    <fullName>APR__c</fullName>
    <label>APR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>