force-app/main/default/objects/Pricing_Offer__c/fields/EBP_Offer_Code__c.field-meta.xml
<CustomField>
    <fullName>EBP_Offer_Code__c</fullName>
    <label>EBP_Offer_Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ebp_dcp_75</fullName>
            </value>
            <value>
                <fullName>ebp_dcp_90</fullName>
            </value>
            <value>
                <fullName>ebp_dcp_optout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>