force-app/main/default/objects/Pricing_Offer__c/fields/EBP_Parent_Offer_Key__c.field-meta.xml
<CustomField>
    <fullName>EBP_Parent_Offer_Key__c</fullName>
    <label>EBP_Parent_Offer_Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>