force-app/main/default/objects/Pricing_Offer__c/fields/external_offer_id__c.field-meta.xml
<CustomField>
    <fullName>external_offer_id__c</fullName>
    <label>external offer id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>