force-app/main/default/objects/Pricing_Offer__c/fields/InvestorCodeOnApp__c.field-meta.xml
<CustomField>
    <fullName>InvestorCodeOnApp__c</fullName>
    <label>InvestorCodeOnApp</label>
    <length>30</length>
    <type>Text</type>
</CustomField>