force-app/main/default/objects/Pricing_Offer__c/fields/Is_Offer_Selected__c.field-meta.xml
<CustomField>
    <fullName>Is_Offer_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Offer Selected</label>
    <type>Checkbox</type>
</CustomField>