force-app/main/default/objects/Pricing_Offer__c/fields/Loan_Premium_Price_ACU__c.field-meta.xml
<CustomField>
    <fullName>Loan_Premium_Price_ACU__c</fullName>
    <description>Updated the values in this formula. Related to LOP-252</description>
    <formula>IF( AND(Application__r.Investor__r.Investor_Code__c ==&apos;ACU&apos;,Application__r.Loan_Origination_Date__c &gt;=  DATE(2021,06,15)) ,
 IF(Term__c == 24,  IF(Pricing_Tier__c == &apos;t1&apos;, 0.0300,  IF(Pricing_Tier__c == &apos;t2&apos;, 0.0275,  IF(Pricing_Tier__c == &apos;t3&apos;, 0.0375,  IF(Pricing_Tier__c == &apos;t4&apos;, 0.0425,  IF(Pricing_Tier__c == &apos;t5&apos;, 0.0250, 0) ) ) ) ) ,
IF(Term__c == 36,  IF(Pricing_Tier__c == &apos;t1&apos;, 0.0400,  IF(Pricing_Tier__c == &apos;t2&apos;, 0.0375,  IF(Pricing_Tier__c == &apos;t3&apos;, 0.0400,  IF(Pricing_Tier__c == &apos;t4&apos;, 0.0450,  IF(Pricing_Tier__c == &apos;t5&apos;, 0.0250, 0) ) ) ) ) ,
IF(Term__c == 48,  IF(Pricing_Tier__c == &apos;t1&apos;, 0.0500,  IF(Pricing_Tier__c == &apos;t2&apos;, 0.0475,  IF(Pricing_Tier__c == &apos;t3&apos;, 0.0425,  IF(Pricing_Tier__c == &apos;t4&apos;, 0.0475,  IF(Pricing_Tier__c == &apos;t5&apos;, 0.0250, 0) ) ) ) ) ,
IF(Term__c == 60,  IF(Pricing_Tier__c == &apos;t1&apos;, 0.0600,  IF(Pricing_Tier__c == &apos;t2&apos;, 0.0575,  IF(Pricing_Tier__c == &apos;t3&apos;, 0.0450,  IF(Pricing_Tier__c == &apos;t4&apos;, 0.0500,  IF(Pricing_Tier__c == &apos;t5&apos;, 0.0250, 0) ) ) ) ) , 0) ) ) ) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan_Premium_Price_ACU</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>