force-app/main/default/objects/Pricing_Offer__c/fields/Loan_Premium_Price_OTB_CRB_Theorem_Main__c.field-meta.xml
<CustomField>
    <fullName>Loan_Premium_Price_OTB_CRB_Theorem_Main__c</fullName>
    <formula>IF( AND(Application__r.Investor__r.Investor_Code__c ==&apos;CRB_THRM_MAIN&apos;) ,
IF(Term__c == 24, IF(Pricing_Tier__c == &apos;t1&apos;, 0.01, IF(Pricing_Tier__c == &apos;t2&apos;, 0.01, IF(Pricing_Tier__c == &apos;t3&apos;, 0.01, IF(Pricing_Tier__c == &apos;t4&apos;, 0.01, IF(Pricing_Tier__c == &apos;t5&apos;, 0.01, IF(Pricing_Tier__c == &apos;t6&apos;, 0.01, 0) ) ) ) ) ) ,
IF(Term__c == 36, IF(Pricing_Tier__c == &apos;t1&apos;, 0.01, IF(Pricing_Tier__c == &apos;t2&apos;, 0.01, IF(Pricing_Tier__c == &apos;t3&apos;, 0.01, IF(Pricing_Tier__c == &apos;t4&apos;, 0.01, IF(Pricing_Tier__c == &apos;t5&apos;, 0.01, IF(Pricing_Tier__c == &apos;t6&apos;, 0.01, 0) ) ) ) ) ) ,
IF(Term__c == 48, IF(Pricing_Tier__c == &apos;t1&apos;, 0.01, IF(Pricing_Tier__c == &apos;t2&apos;, 0.01, IF(Pricing_Tier__c == &apos;t3&apos;, 0.01, IF(Pricing_Tier__c == &apos;t4&apos;, 0.01, IF(Pricing_Tier__c == &apos;t5&apos;, 0.01, IF(Pricing_Tier__c == &apos;t6&apos;, 0.01, 0) ) ) ) ) ) ,
IF(Term__c == 60, IF(Pricing_Tier__c == &apos;t1&apos;, 0.01, IF(Pricing_Tier__c == &apos;t2&apos;, 0.01, IF(Pricing_Tier__c == &apos;t3&apos;, 0.01, IF(Pricing_Tier__c == &apos;t4&apos;, 0.01, IF(Pricing_Tier__c == &apos;t5&apos;, 0.01, IF(Pricing_Tier__c == &apos;t6&apos;, 0.01, 0) ) ) ) ) ) , 0) ) ) ) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan_Premium_Price_OTB_CRB_Theorem_Main</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>