force-app/main/default/objects/Pricing_Offer__c/fields/Loan_Premium_Price_TFCU__c.field-meta.xml
<CustomField>
    <fullName>Loan_Premium_Price_TFCU__c</fullName>
    <formula>IF(Application__r.Investor__r.Investor_Code__c ==&apos;TFCU&apos; ,
IF(Term__c == 24, IF(Pricing_Tier__c == &apos;t1&apos;, 0.0250, IF(Pricing_Tier__c == &apos;t2&apos;, 0.0270, IF(Pricing_Tier__c == &apos;t3&apos;, 0.0320, IF(Pricing_Tier__c == &apos;t4&apos;, 0.0340, IF(Pricing_Tier__c == &apos;t5&apos;, 0.0430, 0) ) ) ) ) ,
IF(Term__c == 36, IF(Pricing_Tier__c == &apos;t1&apos;, 0.0350, IF(Pricing_Tier__c == &apos;t2&apos;, 0.0370, IF(Pricing_Tier__c == &apos;t3&apos;, 0.0450, IF(Pricing_Tier__c == &apos;t4&apos;, 0.0470, IF(Pricing_Tier__c == &apos;t5&apos;, 0.0550, 0) ) ) ) ) ,
IF(Term__c == 48, IF(Pricing_Tier__c == &apos;t1&apos;, 0.0450, IF(Pricing_Tier__c == &apos;t2&apos;, 0.0480, IF(Pricing_Tier__c == &apos;t3&apos;, 0.0500, IF(Pricing_Tier__c == &apos;t4&apos;, 0.0520, IF(Pricing_Tier__c == &apos;t5&apos;, 0.0580, 0) ) ) ) ) ,
IF(Term__c == 60, IF(Pricing_Tier__c == &apos;t1&apos;, 0.0500, IF(Pricing_Tier__c == &apos;t2&apos;, 0.0530, IF(Pricing_Tier__c == &apos;t3&apos;, 0.0550, IF(Pricing_Tier__c == &apos;t4&apos;, 0.0550, IF(Pricing_Tier__c == &apos;t5&apos;, 0.0600, 0) ) ) ) ) , 0) ) ) ) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan_Premium_Price_TFCU</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>