force-app/main/default/objects/Pricing_Offer__c/fields/LoanPremiumPrice__c.field-meta.xml
<CustomField>
    <fullName>LoanPremiumPrice__c</fullName>
    <defaultValue>0</defaultValue>
    <label>LoanPremiumPrice</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>