force-app/main/default/objects/Pricing_Offer__c/fields/Origination_fee__c.field-meta.xml
<CustomField>
    <fullName>Origination_fee__c</fullName>
    <label>Origination fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>