force-app/main/default/objects/Pricing_Offer__c/fields/Origination_fee_rate__c.field-meta.xml
<CustomField>
    <fullName>Origination_fee_rate__c</fullName>
    <label>Origination fee rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>