force-app/main/default/objects/Pricing_Offer__c/fields/OriginationDateOnApp__c.field-meta.xml
<CustomField>
    <fullName>OriginationDateOnApp__c</fullName>
    <label>OriginationDateOnApp</label>
    <type>Date</type>
</CustomField>