force-app/main/default/objects/Pricing_Offer__c/fields/Total_of_Payments_TIL__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Payments_TIL__c</fullName>
    <description>Monthly_Payment__c * Term__c</description>
    <formula>Monthly_Payment__c * Term__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total of Payments TIL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>